// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amplify-form-section spec: Render logic -> should render a form section with a default button of \`Submit\` 1`] = `
<amplify-form-section>
  <!---->
  <form>
    <amplify-section>
      <div>
        <slot-fb name="amplify-form-section-header">
          <div class="form-section-header">
            <h3 class="header" data-test="form-section-header-section"></h3>
            <div class="subtitle"></div>
          </div>
        </slot-fb>
      </div>
      <div>
        <slot-fb name="amplify-form-section-footer">
          <div class="form-section-footer">
            <amplify-button data-test="form-section-form-section-button" type="submit">
              <span>
                Submit
              </span>
            </amplify-button>
          </div>
        </slot-fb>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render a form section with a submit button text of \`Go\` 1`] = `
<amplify-form-section submit-button-text="Go">
  <!---->
  <form>
    <amplify-section>
      <div>
        <slot-fb name="amplify-form-section-header">
          <div class="form-section-header">
            <h3 class="header" data-test="form-section-header-section"></h3>
            <div class="subtitle"></div>
          </div>
        </slot-fb>
      </div>
      <div>
        <slot-fb name="amplify-form-section-footer">
          <div class="form-section-footer">
            <amplify-button data-test="form-section-form-section-button" type="submit">
              <span>
                Go
              </span>
            </amplify-button>
          </div>
        </slot-fb>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;

exports[`amplify-form-section spec: Render logic -> should render form section 1`] = `
<amplify-form-section>
  <!---->
  <form>
    <amplify-section>
      <div>
        <slot-fb name="amplify-form-section-header">
          <div class="form-section-header">
            <h3 class="header" data-test="form-section-header-section"></h3>
            <div class="subtitle"></div>
          </div>
        </slot-fb>
      </div>
      <div>
        <slot-fb name="amplify-form-section-footer">
          <div class="form-section-footer">
            <amplify-button data-test="form-section-form-section-button" type="submit">
              <span>
                Submit
              </span>
            </amplify-button>
          </div>
        </slot-fb>
      </div>
    </amplify-section>
  </form>
</amplify-form-section>
`;
